--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
